--- a/codec/assessment.html
+++ b/codec/assessment.html
@@ -8,7 +8,7 @@
     <body style="background-color: rgb(190, 235, 235);"
 </head>
 <body>
-    <h1>WELCOME TO MY WEBSITE</h1>
+    <h1>WELCOME TO MY  WEBSITE</h1>
     <hr>
     <div style="display: flex; gap: 20px;">
     
@@ -19,6 +19,7 @@
         <a href="https://en.wikipedia.org/wiki/Penguin">more about</a>
 
     </p>
+    <h1>this is h1</h1>
 
     </div>
         <table border="1">
